--- a/package.json
+++ b/package.json
@@ -13,11 +13,19 @@
     "@supabase/auth-ui-react": "^0.4.6",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.38.4",
+    "@tanstack/react-query": "^5.8.1",
+    "@tanstack/table-core": "^8.10.7",
+    "formik": "^2.4.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.18.0",
+    "recharts": "^2.9.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.201",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
