--- a/package.json
+++ b/package.json
@@ -1,46 +1,63 @@
 {
-  "name": "hackathon-react-template",
+  "name": "prosperpal-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
-    "@google-ai/generativelanguage": "^1.1.0",
-    "@supabase/auth-ui-react": "^0.4.6",
-    "@supabase/auth-ui-shared": "^0.1.8",
+    "@faker-js/faker": "^8.0.1",
+    "@headlessui/react": "^1.7.14",
+    "@reduxjs/toolkit": "^1.9.3",
     "@supabase/supabase-js": "^2.38.4",
-    "@tanstack/react-query": "^5.8.1",
-    "@tanstack/table-core": "^8.10.7",
-    "axios": "^1.6.1",
-    "formik": "^2.4.5",
-    "google-auth-library": "^9.2.0",
-    "lodash": "^4.17.21",
+    "@tanstack/react-table": "^8.8.5",
+    "@tensorflow/tfjs": "^4.10.0",
+    "@types/react-big-calendar": "^1.6.5",
+    "axios": "^1.3.5",
+    "dayjs": "^1.11.10",
+    "formik": "^2.2.9",
+    "heroicons": "^2.0.18",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.4",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.18.0",
-    "recharts": "^2.9.3",
-    "zod": "^3.22.4"
+    "react-icons": "^4.8.0",
+    "react-qr-code": "^2.0.11",
+    "react-query": "^3.39.3",
+    "react-redux": "^8.0.5",
+    "react-router": "^6.10.0",
+    "react-table": "^7.8.0",
+    "recharts": "^2.5.0",
+    "sass": "^1.68.0",
+    "use-react-router-breadcrumbs": "^4.0.1",
+    "zod": "^3.21.4",
+    "zod-formik-adapter": "^1.2.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.201",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "@storybook/addon-essentials": "^7.0.2",
+    "@storybook/addon-interactions": "^7.0.2",
+    "@storybook/addon-links": "^7.0.2",
+    "@storybook/blocks": "^7.0.2",
+    "@storybook/react": "^7.0.2",
+    "@storybook/react-vite": "^7.0.2",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-table": "^7.7.14",
+    "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.14",
+    "cypress": "^13.3.0",
+    "postcss": "^8.4.21",
+    "prop-types": "^15.8.1",
+    "react-router-dom": "^6.10.0",
+    "storybook": "^7.0.2",
+    "tailwindcss": "^3.3.1",
+    "typescript": "^4.9.3",
+    "vite": "^4.2.0"
   }
 }
