--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^1.7.14",
     "@reduxjs/toolkit": "^1.9.3",
     "@supabase/supabase-js": "^2.38.4",
+    "@tanstack/react-query": "^5.8.2",
     "@tanstack/react-table": "^8.8.5",
     "@tensorflow/tfjs": "^4.10.0",
     "@types/react-big-calendar": "^1.6.5",
